# pytransaln

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_tests.sh
src/: pytransaln.py
src/pytransaln/: align.py  frameshifts.py  pytransaln.py  stats.py  testmodule.py  translate.py
