[build-system]
requires = ["setuptools>=61.0.0"]

[project]
name = "pytransaln"
dynamic = ["version"]
description = "Translation-guided nucleotide alignment for coding sequences"
license = { file = "LICENSE" }
authors = [
  { name = "Brandon Seah", email = "brandon.seah@thuenen.de" },
]
dependencies = [
    "biopython >=1.80, <2",
    "pandas >=1.5, <3",
    "matplotlib >=3.6, <4",
    "pyhmmer ==0.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pytransaln.__version__"}

[project.scripts]
pytransaln = "pytransaln.pytransaln:main"

[project.urls]
Homepage = "https://github.com/monagrland/pytransaln"
